--- a/Fantasy.html
+++ b/Fantasy.html
@@ -8,9 +8,26 @@
     <link rel="stylesheet" type="text/css" href="books.css"/>
 </head>
 <body>
+
     <header>
-        <h2>Fantasy</h2>
+        <nav class="navbar">
+            <ul>
+                <li>
+                    <span>
+                        recommendR
+                    </span>
+                </li>
+                <li> <a href="main.html"> HOME </a></li>
+                <li> <a href="Fantasy.html"> FANTASY </a></li>
+                <li><a href="Horror.html">HORROR</a></li>
+                <li><a href="sci-fiction">SCI-FI</a></li>
+            </ul>
+        </nav>
     </header>
+
+    <div class="genre_name">
+        <h2>Fantasy</h2>
+    </div>
 
     <div class="book">
         <h3 class="book_name">The Hobbit by J.R.R. Tolkien </h3>
@@ -38,6 +55,7 @@
     </p>
 
     </div>
+
     <div class="book">
         <h3 class="book_name">The Lion, the Witch, and the Wardrobe by C.S. Lewis</h3>
         <img src= "https://m.media-amazon.com/images/I/51hQ4EstmyL.jpg" alt="" class="book_pic">
@@ -104,7 +122,6 @@
         <a href="https://www.amazon.com/dp/B00PI181I4?tag=reedwebs-20&linkCode=ogi&th=1&psc=1" target="_blank">Click here</a>
     </p>
     </div>
-
 
     <div class="book">
         <h3 class="book_name"> The Gunslinger by Stephen King</h3>
