--- a/Horror.html
+++ b/Horror.html
@@ -5,12 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>horror</title>
-    <!-- <link rel="stylesheet" href="books.css"> -->
+    <link rel="stylesheet" href="books.css">
 </head>
 <body>
+
     <header>
-        <h2>Horror</h2>
+        <nav class="navbar">
+            <ul>
+                <li>
+                    <span>
+                        recommendR
+                    </span>
+                </li>
+                <li> <a href="main.html"> HOME </a></li>
+                <li> <a href="Fantasy.html"> FANTASY </a></li>
+                <li><a href="Horror.html"> HORROR </a></li>
+                <li><a href="sci-fiction.html"> SCI-FI</a></li>
+            </ul>
+        </nav>
     </header>
+
+
+    <div class="genre_name">
+        <h2>Horror</h2>
+    </div>
+
+
 
     <div class="book">
         <h3 class="book_name">Dracula by Bram Stoker </h3>
