--- a/Short_Stories.html
+++ b/Short_Stories.html
@@ -4,15 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thriller</title>
+    <title>Short-stories</title>
      <link rel="stylesheet" type="text/css" href="books.css"/>
 </head>
 
 
     <body>
-    <header>
-        <h2>Short Stories</h2>
-    </header>
+
+        <header>
+            <nav class="navbar">
+                <ul>
+                    <li>
+                        <span>
+                            recommendR
+                        </span>
+                    </li>
+                    <li> <a href="main.html"> HOME </a></li>
+                    <li> <a href="Fantasy.html"> FANTASY </a></li>
+                    <li><a href="Horror.html"> HORROR </a></li>
+                    <li><a href="sci-fiction.html"> SCI-FI</a></li>
+                </ul>
+            </nav>
+        </header>
+
+        <div class="genre_name">
+            <h2>Short-stories</h2>
+        </div>
     
     <div class="book">
         <h3 class="book_name">The Complete Stories by Franz Kafka </h3>
