--- a/autobiography.html
+++ b/autobiography.html
@@ -9,8 +9,25 @@
 </head>
 <body>
     <header>
-        <h2>Autobiography</h2>
+        <nav class="navbar">
+            <ul>
+                <li>
+                    <span>
+                        recommendR
+                    </span>
+                </li>
+                <li> <a href="main.html"> HOME </a></li>
+                <li> <a href="Fantasy.html"> FANTASY </a></li>
+                <li><a href="Horror.html"> HORROR </a></li>
+                <li><a href="sci-fiction.html"> SCI-FI</a></li>
+            </ul>
+        </nav>
     </header>
+
+<div class="genre_name">
+    <h2>Autobiography</h2>
+</div>
+
 
     <div class="book">
         <h3 class="book_name">The Autobiography of Malcolm X by Malcolm X and Alex Haley</h3>
