--- a/sci-fiction.html
+++ b/sci-fiction.html
@@ -4,15 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thriller</title>
+    <title>sci-fiction</title>
      <link rel="stylesheet" type="text/css" href="books.css"/>
 </head>
 
-
     <body>
-    <header>
+
+        <header>
+            <nav class="navbar">
+                <ul>
+                    <li>
+                        <span>
+                            recommendR
+                        </span>
+                    </li>
+                    <li> <a href="main.html"> HOME </a></li>
+                    <li> <a href="Fantasy.html"> FANTASY </a></li>
+                    <li><a href="Horror.html"> HORROR </a></li>
+                    <li><a href="sci-fiction.html"> SCI-FI</a></li>
+                </ul>
+            </nav>
+        </header>
+    
+    <div class="genre_name">
         <h2>Science-Fiction</h2>
-    </header>
+    </div>
+
+
     
     <div class="book">
         <h class="book_name"3>"Dune" by Frank Herbert</h3>
