--- a/women_empowerment.html
+++ b/women_empowerment.html
@@ -9,8 +9,24 @@
 </head>
 <body>
     <header>
-        <h2>Women Empowerment</h2>
+        <nav class="navbar">
+            <ul>
+                <li>
+                    <span>
+                        recommendR
+                    </span>
+                </li>
+                <li> <a href="main.html"> HOME </a></li>
+                <li> <a href="Fantasy.html"> FANTASY </a></li>
+                <li><a href="Horror.html"> HORROR </a></li>
+                <li><a href="sci-fiction.html"> SCI-FI</a></li>
+            </ul>
+        </nav>
     </header>
+
+    <div class="genre_name">
+        <h2>Women Empowerment</h2>
+    </div>
 
     <div class="book">
         <h3 class="book_name">Lean In: Women, Work, and the Will to Lead by Sheryl Sandberg</h3>
