--- a/Fantasy.html
+++ b/Fantasy.html
@@ -20,7 +20,7 @@
                 <li> <a href="main.html"> HOME </a></li>
                 <li> <a href="Fantasy.html"> FANTASY </a></li>
                 <li><a href="Horror.html">HORROR</a></li>
-                <li><a href="sci-fiction">SCI-FI</a></li>
+                <li><a href="sci-fiction.html">SCI-FI</a></li>
             </ul>
         </nav>
     </header>
